@@ -2022,12 +2022,24 @@ closedir(d);
 #		XINCLUDES
 #		XLIBSW
 #		LIBS (appends to)
+#		TEA_WINDOWINGSYSTEM
 #
 #--------------------------------------------------------------------
 
 AC_DEFUN(TEA_PATH_X, [
     if test "${TEA_PLATFORM}" = "unix" ; then
-	TEA_PATH_UNIX_X
+	case ${TK_DEFS} in
+	    *MAC_OSX_TK*)
+		AC_DEFINE(MAC_OSX_TK)
+		TEA_WINDOWINGSYSTEM="aqua"
+		;;
+	    *)
+		TEA_PATH_UNIX_X
+		TEA_WINDOWINGSYSTEM="x11"
+		;;
+	esac
+    elif test "${TEA_PLATFORM}" = "windows" ; then
+	TEA_WINDOWINGSYSTEM="windows"
     fi
 ])
 
